# denginks-opcua-diagnostic-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  clean_history.ps1
.github/workflows/: rust.yml
denginks_opcua_emulator/: index.js  package-lock.json  package.json
docs/: architecture.md  i18n.md
src/: app.rs  lib.rs  main.rs
src/config/: bookmarks.rs  mod.rs  settings.rs
src/export/: mod.rs
src/network/: diagnostics.rs  discovery.rs  mod.rs  precheck.rs
src/opcua/: browser.rs  certificates.rs  client.rs  crawler.rs  mod.rs  status_codes.rs  subscription.rs  subscription_manager.rs
src/ui/: certificates_panel.rs  connection.rs  crawler_panel.rs  dialogs.rs  error_panel.rs  mod.rs  monitor.rs  properties.rs  tree_view.rs  trending.rs
src/utils/: clipboard.rs  i18n.rs  i18n_tests.rs  mod.rs  status_codes.rs
tests/: network_integration.rs
